--- a/MapsDrawer/Base.lproj/Main.storyboard
+++ b/MapsDrawer/Base.lproj/Main.storyboard
@@ -1,105 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MapsDrawer" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="0Ag-Lp-a2a"/>
-                        <viewControllerLayoutGuide type="bottom" id="lBy-WT-QO2"/>
-                    </layoutGuides>
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MultiPan" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main Content" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hW4-nj-RsE">
-                                <rect key="frame" x="136" y="323" width="102.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" contentInsetAdjustmentBehavior="never" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gIc-YP-twl">
-                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <inset key="scrollIndicatorInsets" minX="0.0" minY="44" maxX="0.0" maxY="0.0"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="jmH-cF-ErX" style="IBUITableViewCellStyleDefault" id="OIl-jK-YWz">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OIl-jK-YWz" id="YQL-qp-BfJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jmH-cF-ErX">
-                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E3X-JD-tib">
+                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
                                 <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="HhS-wh-Fhv"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="W7q-Mp-LI8"/>
+                                    <segue destination="LO6-R5-7nD" kind="embed" id="O8v-if-Pwx"/>
                                 </connections>
-                            </tableView>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="co0-gV-iNV">
-                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                                <gestureRecognizers/>
-                                <items>
-                                    <navigationItem title="Drawer" id="KlO-mr-4Fc"/>
-                                </items>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="Vzg-ff-AxA" appends="YES" id="0F4-ii-HfV"/>
-                                    <outletCollection property="gestureRecognizers" destination="5vj-0F-RWJ" appends="YES" id="vzG-eq-54P"/>
-                                </connections>
-                            </navigationBar>
+                            </containerView>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.62745098040000002" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="gIc-YP-twl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4b1-yr-8P2"/>
-                            <constraint firstItem="co0-gV-iNV" firstAttribute="top" secondItem="lBy-WT-QO2" secondAttribute="top" constant="-44" id="FNr-av-7sV"/>
-                            <constraint firstItem="co0-gV-iNV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="G2b-LU-aEE"/>
-                            <constraint firstItem="lBy-WT-QO2" firstAttribute="top" secondItem="gIc-YP-twl" secondAttribute="bottom" id="GFq-e8-Qki"/>
-                            <constraint firstItem="hW4-nj-RsE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LNs-8d-HW0"/>
-                            <constraint firstItem="gIc-YP-twl" firstAttribute="top" secondItem="lBy-WT-QO2" secondAttribute="top" constant="-44" id="Rqg-gw-7Az"/>
-                            <constraint firstAttribute="trailing" secondItem="gIc-YP-twl" secondAttribute="trailing" id="Ub9-mU-xOe"/>
-                            <constraint firstAttribute="trailing" secondItem="co0-gV-iNV" secondAttribute="trailing" id="d6Y-wS-16U"/>
-                            <constraint firstItem="hW4-nj-RsE" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="igu-Ih-4c8"/>
+                            <constraint firstItem="E3X-JD-tib" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="KEi-4e-CGV"/>
+                            <constraint firstItem="E3X-JD-tib" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="MOj-TT-p0J"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="E3X-JD-tib" secondAttribute="bottom" id="Rip-zk-xU9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="E3X-JD-tib" secondAttribute="trailing" id="g90-Ou-a2g"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="navigationBar" destination="co0-gV-iNV" id="kKS-tK-mz2"/>
-                        <outlet property="tableView" destination="gIc-YP-twl" id="bRz-dB-GFQ"/>
-                        <outlet property="topOfBar" destination="FNr-av-7sV" id="Pxp-t7-goe"/>
-                        <outlet property="topOfTable" destination="Rqg-gw-7Az" id="Yud-D0-Zx0"/>
+                        <outlet property="topMargin" destination="KEi-4e-CGV" id="rUF-DM-ZHb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="Vzg-ff-AxA">
-                    <connections>
-                        <action selector="tap:" destination="BYZ-38-t0r" id="RiG-2U-GX1"/>
-                    </connections>
-                </tapGestureRecognizer>
-                <panGestureRecognizer minimumNumberOfTouches="1" id="5vj-0F-RWJ">
-                    <connections>
-                        <action selector="pan:" destination="BYZ-38-t0r" id="cgn-fb-V0i"/>
-                    </connections>
-                </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="85.5" y="148.5"/>
+            <point key="canvasLocation" x="32.799999999999997" y="32.833583208395808"/>
+        </scene>
+        <!--Drawer-->
+        <scene sceneID="W2D-Ki-I8Y">
+            <objects>
+                <tableViewController id="NQE-1W-eDy" customClass="TableViewController" customModule="MultiPan" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="qga-6J-yNC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="483"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="AMI-Uk-ruO" style="IBUITableViewCellStyleDefault" id="aLP-lW-mAd">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aLP-lW-mAd" id="eyh-wT-New">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AMI-Uk-ruO">
+                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="NQE-1W-eDy" id="7OZ-aN-Llo"/>
+                            <outlet property="delegate" destination="NQE-1W-eDy" id="SDW-We-bQX"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Drawer" id="8DT-eR-RZz"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Ic-dS-KG2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1481" y="42"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rRr-b2-cCb">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LO6-R5-7nD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="Rg9-4T-7bf">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="NQE-1W-eDy" kind="relationship" relationship="rootViewController" id="1JH-0i-yYW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7RA-WX-yfr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="796.79999999999995" y="42.278860569715143"/>
         </scene>
     </scenes>
 </document>
